src/objects/InputFile__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.</description>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfRecords__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Number Of Records</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Input Files</relationshipLabel>
        <relationshipName>InputFiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Input File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Input Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>